# transparent-classroom-photos-grabber-rs

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  future-features.md  get_photos.py  issues.md  missing-tests.md  output.txt  prompt_plan.md
.github/workflows/: release.yml.toosoon  rust-audit.yml  rust-docs.yml  rust-fmt.yml  rust-lint.yml  rust-test.yml
photos/post_1_Mock_observation_1_-_Developme/: mock-1747837843-1_Mock_observation_1_-_DevelopmentTesting_Only_Mock_Teacher_0.metadata.txt  mock-1747838235-1_Mock_observation_1_-_DevelopmentTesting_Only_Mock_Teacher_1.metadata.txt  mock-1747863412-1_Mock_observation_1_-_DevelopmentTesting_Only_Mock_Teacher_0.metadata.txt
photos/post_2_Mock_observation_2_-_For_testi/: mock-1747837843-2_Mock_observation_2_-_For_testing_image_download_Mock_Teacher_2_0.metadata.txt  mock-1747838235-2_Mock_observation_2_-_For_testing_image_download_Mock_Teacher_2_0.metadata.txt  mock-1747863412-2_Mock_observation_2_-_For_testing_image_download_Mock_Teacher_2_0.metadata.txt
src/: cache.rs  cli.rs  client.rs  config.rs  error.rs  lib.rs  main.rs
test_photos/post_1_Mock_observation_1_-_Developme/: mock-1747837790-1_Mock_observation_1_-_DevelopmentTesting_Only_Mock_Teacher_0.metadata.txt
test_photos/post_2_Mock_observation_2_-_For_testi/: mock-1747837790-2_Mock_observation_2_-_For_testing_image_download_Mock_Teacher_2_0.metadata.txt
test_photos2/post_1_Mock_observation_1_-_Developme/: mock-1747863392-1_Mock_observation_1_-_DevelopmentTesting_Only_Mock_Teacher_0.metadata.txt
test_photos2/post_2_Mock_observation_2_-_For_testi/: mock-1747863392-2_Mock_observation_2_-_For_testing_image_download_Mock_Teacher_2_0.metadata.txt
tests/: basic_test.rs  cache_test.rs  client_login_test.rs  client_test.rs  config_test.rs  config_test_robust.rs  error_handling_test.rs  integration_test.rs  smoke_test.rs
