[package]
name = "transparent-classroom-photos-grabber-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust implementation to download photos from Transparent Classroom"
default-run = "main"

[dependencies]
dotenv = "0.15.0"
thiserror = "1.0.52"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
reqwest = { version = "0.11.24", features = ["blocking", "cookies", "json"] }
scraper = "0.18.1"
dirs = "5.0.1"
kamadak-exif = "0.5.5"
chrono = { version = "0.4.31", features = ["serde"] }

[dev-dependencies]
tempfile = "3.10.1"
mockito = "1.2.0"
